<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AirBridge</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="push_title">airbridge push</string>

    <string name="tab_contacts">Contacts</string>
    <string name="tab_cards">MyCards</string>
    <string name="tab_discovery">Discover</string>
    <string name="tab_settings">Settings</string>

    <!-- Suffix after '-' must be the app package name as specified in the build.gradle file. This
      is used by the com.amazonaws.mobile.downloader.query.DownloadQueueProvider class. -->
    <string name="download_queue_provider_authority">com.amazonaws.mobile.downloader-com.intbridge.projecttellurium.airbridge</string>
    <!-- This can be anything, but it should be unique to the app. -->
    <string name="content_file_provider_authority">com.intbridge.projecttellurium.airbridge.fileprovider</string>
    <string name="google_cloud_messaging_package">com.intbridge.projecttellurium.airbridge</string>

    <string name="main_nav_menu_item_home">Home</string>
    <string name="title_activity_item_detail">Item Detail</string>
    <string name="title_activity_item_list">Item List</string>
    <string name="title_activity_main">@string/app_name</string>
    <string name="title_activity_sign_in">Sign-in</string>
    <string name="button_text_sign_in">SIGN IN</string>
    <string name="button_text_sign_out">SIGN OUT</string>
    <string name="content_helper_error_title">No Content Viewer</string>
    <string name="content_helper_error_no_app">No Viewing App exists for content type \'%s\'.</string>
    <string name="splash_icon" />
    <string name="splash_version">AirBridge Version 0.5.1</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_bar_add">Add</string>
    <string name="app_bar_inbox">inbox</string>
    <string name="sendcard_text">Send your card to:</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_username">Username</string>
    <string name="prompt_cardname">Card Name</string>
    <string name="prompt_firstname">First</string>
    <string name="prompt_lastname">Last</string>
    <string name="prompt_position">Position</string>
    <string name="prompt_address">Address</string>
    <string name="prompt_website">Website</string>
    <string name="prompt_phone">Phone</string>
    <string name="prompt_username_email">Username or Email</string>
    <string name="delete_button">Delete</string>
    <string name="app_bar_new_box">New Box</string>
    <string name="sendcard_box_text">Place your card in:</string>
</resources>
