<com.flipboard.bottomsheet.BottomSheetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottomsheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:wang="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/default_background"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/app_bar_bg_line"/>

    <FrameLayout
        android:id="@+id/fragment_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:background="@drawable/tab_bg_line"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal"
        android:layout_gravity="bottom">

        <com.intbridge.projecttellurium.airbridge.views.IconWithTextView
            android:id="@+id/tab_contacts"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            wang:pgicon="@drawable/ic_account_circle_grey_500_24dp"
            android:padding="9dp"
            wang:text="@string/tab_contacts"
            wang:text_size="12sp"
            wang:pgcolor="#2a75a9"
            />

        <com.intbridge.projecttellurium.airbridge.views.IconWithTextView
            android:id="@+id/tab_cards"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            wang:pgicon="@drawable/ic_content_copy_grey_500_24dp"
            android:padding="9dp"
            wang:text="@string/tab_cards"
            wang:text_size="12sp"
            wang:pgcolor="#2a75a9"
            />

        <com.intbridge.projecttellurium.airbridge.views.IconWithTextView
            android:id="@+id/tab_discovery"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            wang:pgicon="@drawable/ic_wifi_tethering_grey_500_24dp"
            android:padding="9dp"
            wang:text="@string/tab_discovery"
            wang:text_size="12sp"
            wang:pgcolor="#2a75a9"
            />

        <com.intbridge.projecttellurium.airbridge.views.IconWithTextView
            android:id="@+id/tab_settings"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            wang:pgicon="@drawable/ic_settings_grey_500_24dp"
            android:padding="9dp"
            wang:text="@string/tab_settings"
            wang:text_size="12sp"
            wang:pgcolor="#2a75a9"
            />

    </LinearLayout>

</LinearLayout>
</com.flipboard.bottomsheet.BottomSheetLayout>